# agent-governance-hub

./: .gitignore  README.md  demo_rag_simple.py  demo_retriever.py  main.py  pyproject.toml
agents/: __init__.py  base_agent.py  callbacks.py  execution_coordinator.py  prompts.py  rag_agent.py  retriever_agent.py  tool_manager.py  vector_store_manager.py
api/: __init__.py  exceptions.py  main.py
config/: __init__.py  settings.py
config/policies/: default.yaml
data/docs/: doc_001.txt  doc_002.txt  doc_003.txt  doc_004.txt  doc_005.txt
governance/: __init__.py  models.py  policy_engine.py  policy_loader.py
pipelines/: __init__.py  document_pipeline.py
tests/: __init__.py
tests/agents/: conftest.py  test_retriever_agent.py
tests/governance/: conftest.py  test_policy_loader.py
tools/: __init__.py  vector_retrieval.py
